# cx_freeze_prisma_reproduction

./: .gitignore  README.md  database.db  postgres.schema.prisma  pyproject.toml  schema.prisma  setup.py
.github/workflows/: ci.yml
cx_freeze_prisma_reproduction/: app.py
