[tool.poetry]
name = "cx-freeze-prisma-reproduction"
version = "0.1.0"
description = ""
authors = ["Nicholas Tindle <nick@ntindle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.13.1"
cx-Freeze = "^7.2.0"
poethepoet = "^0.27.0"

[tool.poe.tasks.dist_msi]
cmd = "python setup.py bdist_msi"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
